;;;; -*- coding: utf-8; -*-
changes in sbcl-1.0.20 relative to 1.0.19:
  * bug fix: fixed #427: unused local aliens no longer cause compiler
    breakage. (reported by Stelian Ionescu, Andy Hefner and Stanislaw
    Halik)

changes in sbcl-1.0.19 relative to 1.0.18:
  * new feature: user-customizable variable SB-EXT:*MUFFLED-WARNINGS*;
    warnings that go otherwise unhandled will be muffled if they are
    of the type that's the value of this variable.  
  * optimization: stack allocation is slightly more efficient on x86
    and x86-64.
  * bug fix: DEFSTRUCT forms with user-specified :CONSTRUCTOR options,
    where a raw slot always is initialized using the initform whose
    type is not know sufficiently well a compile-time are now compiled
    correctly. (reported by John Morrison)
  * bug fix: compiler no longer makes erronous assumptions in the
    presense of non-foldable SATISFIES types.
  * bug fix: stack analysis missed cleanups of dynamic-extent
    arguments in non-let-converted calls to local functions.
  * improvements to the Windows port:
    ** adjusted address spaces for building on both Win32 and
       Win64. (thanks for John Connors)
  * fixed some bugs revealed by Paul Dietz' test suite:
    ** interval arithmetic during type derivation used inexact integer
       to single-float coercions.
    ** arithmetic operations involving large integers and single
       floats give the same results in compiled and interpreted code.
    ** deriving the result type of COERCE no longer signals an error
       if the derived type of the second argument is a MEMBER type
       containing invalid type specifiers.
    ** ADJOIN with constant NIL as second argument works correctly.
    ** FUNCTION-KEYWORDS was called SB-PCL::FUNCTION-KEYWORD-PARAMETERS.

changes in sbcl-1.0.18 relative to 1.0.17:
  * minor incompatible change: SB-SPROF:WITH-PROFILING now by default
    profiles only the current thread.