@@ -3,6 +3,8 @@ changes in sbcl-1.0.20 relative to 1.0.19:
   * bug fix: fixed #427: unused local aliens no longer cause compiler
     breakage. (reported by Stelian Ionescu, Andy Hefner and Stanislaw
     Halik)
+  * bug fix: non-local exit from a WITH-ALIEN form no longer causes
+    alien-stack leakage. (reported by Andy Hefner)
 
 changes in sbcl-1.0.19 relative to 1.0.18:
   * new feature: user-customizable variable SB-EXT:*MUFFLED-WARNINGS*;
